# Smart-Latex

./: GEMINI.md  Readme.md  latextemplates  muxpdfmk  pyproject.toml
src/: smlmk.py  smltt.py
