[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "smart-latex-suite"
version = "1.0.0"
description = "A collection of command-line tools to simplify and automate the LaTeX workflow."
readme = "Readme.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
  { name="LinhMuks-DFox", email="your@email.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Text Editors :: Text Processing",
    "Topic :: Utilities",
]
dependencies = [
    "watchdog",
]

[project.scripts]
smlmk = "smlmk:main"
smltt = "smltt:main"

[tool.setuptools]
package-dir = {"" = "src"}
